Google reCaptcha fully implemented

--- a/frontend/src/app/components/sign-up/sign-up.component.html
+++ b/frontend/src/app/components/sign-up/sign-up.component.html
@@ -308,11 +308,11 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-12 d-flex justify-content-center">
             <re-captcha
             formControlName="captcha"
             (resolved)="onCaptchaResolved($event)"
-            siteKey={{captchakey}}>
+            >
           </re-captcha>
           </div>
         </div>
