--- a/frontend/src/app/components/decorater/decorater-dashboard-bookings/decorater-dashboard-bookings.component.css
+++ b/frontend/src/app/components/decorater/decorater-dashboard-bookings/decorater-dashboard-bookings.component.css
@@ -46,6 +46,13 @@ main {
     align-items: center;
     gap: 10px;
     width: 100%; /* Full width to occupy table cell */
+    margin-bottom: 0;
+    padding: 0;
+    box-shadow: none;
+  }
+
+  .p-button-label{
+    margin: 0;
   }
   
   /* Form and Table Container Adjustments */
