--- a/frontend/src/app/components/firm/firm.component.css
+++ b/frontend/src/app/components/firm/firm.component.css
@@ -1,4 +1,36 @@
 canvas {
     pointer-events: auto;
   }
+  .shape-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .shape {
+    margin: 10px;
+    cursor: pointer;
+  }
+  
+  .square {
+    width: 50px;
+    height: 50px;
+  }
+  
+  .circle {
+    border-radius: 50%;
+  }
+  
+  .tall-rectangle {
+    width: 50px;
+    height: 100px;
+  }
+  
+  .wide-rectangle {
+    width: 100px;
+    height: 50px;
+  }
+  
+  .ellipse {
+    border-radius: 50%;
+  }
   
