Solved a bug where rating update won't propagate to firm from booking; added search to user dashboard

--- a/frontend/src/app/components/homepage/homepage.component.html
+++ b/frontend/src/app/components/homepage/homepage.component.html
@@ -79,28 +79,41 @@
                   (ngSubmit)="search()"
                   class="inline-form"
                 >
-                  <span class="p-input-icon-left ml-auto">
-                    <input
-                      formControlName="name"
-                      pInputText
-                      type="text"
-                      placeholder="Firm name"
-                    />
-                  </span>
-                  <span class="p-input-icon-left ml-auto">
-                    <input
-                      formControlName="address"
-                      pInputText
-                      type="text"
-                      placeholder="Street number, City"
-                    />
-                  </span>
-                  <button
+
+                <div class="row">
+                  <div class="col-md-4">
+                    <span class="p-input-icon-left ml-auto">
+                      <input
+                        formControlName="name"
+                        pInputText
+                        type="text"
+                        placeholder="Firm name"
+                      />
+                    </span>
+                  </div>
+                  <div class="col-md-4">
+                    <span class="p-input-icon-left ml-auto">
+                      <input
+                        formControlName="address"
+                        pInputText
+                        type="text"
+                        placeholder="Street number, City"
+                      />
+                    </span>
+                  </div>
+                  <div class="col-md-4">
+                    <button
                     pButton
                     type="submit"
                     label="Search"
                     class="p-button-secondary mt-2"
                   ></button>
+                  </div>
+
+                </div>
+                  
+                  
+                 
                 </form>
               </ng-template>
 
