--- a/frontend/src/app/components/admin/admin-dashboard/admin-dashboard.component.html
+++ b/frontend/src/app/components/admin/admin-dashboard/admin-dashboard.component.html
@@ -43,14 +43,9 @@
 
     <!-- Main Content -->
     <main
-      class="container-fluid d-flex flex-column justify-content-start"
-    >
+      class="d-flex flex-column justify-content-center align-items-center">
 
-    <div class="content-container">
-      <router-outlet></router-outlet>
-    </div>
-
-        
+    <router-outlet></router-outlet>
     </main>
 
     <!-- Footer -->
