--- a/frontend/src/app/components/decorater/decorater-dashboard-maintenence/decorater-dashboard-maintenence.component.html
+++ b/frontend/src/app/components/decorater/decorater-dashboard-maintenence/decorater-dashboard-maintenence.component.html
@@ -32,7 +32,7 @@
                 style="text-wrap: nowrap;"
                   pButton
                   type="submit"
-                  label="Request Maintenance"
+                  label="Reject Maintenance"
                   class="p-button-danger mt-2"
                   (click)="reject(i)"
                 ></button>
