--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -59,6 +59,7 @@ main {
   display: flex;
   flex-direction: column; /* Stack child elements vertically */
   align-items: center; /* Center align horizontally */
+  height: 100vh;
 }
 
 .custom-container {
@@ -77,6 +78,7 @@ main {
   display: flex;
   flex-direction: column; 
   align-items: center; 
+  height: 100vh;
 }
 
 .content-container > * { 
